@@ -5,12 +5,11 @@
 
 sudo apt-get update
 
-cd /home/vagrant/minecruft
-sudo ./setup
-
 sudo apt install -y openjdk-8-jre-headless git
 
-cd Minecraft_Server
+cd ..
+mkdir minecraft_server
+cd minecraft_server
 
 curl -o BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar 
 
@@ -19,4 +18,13 @@ sudo java -Xmx1024M -jar BuildTools.jar --rev 1.12.2
 
 mv spigot*.jar spigot.jar
 
-java -Xms1G -Xmx1G -XX:+UseConcMarkSweepGC -jar spigot.jar
+sudo cp ../minecruft/Minecraft_Server/eula.txt .
+sudo cp ../minecruft/Minecraft_Server/server.properties .
+sudo cp ../minecruft/Minecraft_Server/start_server.sh .
+
+#sudo apt upgrade -y 
+#sudo apt autoremove -y
+#sudo apt-get remove -y python3
+
+cd /home/vagrant/minecruft
+sudo ./setup
